ajsute repo shopping

--- a/shopping-service/src/main/resources/application.yml
+++ b/shopping-service/src/main/resources/application.yml
@@ -49,4 +49,8 @@ spring:
       mode: always      
   config:
     import: "optional:configserver:"
-    
+
+eureka:
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
