--- a/config-data/customer-service.yml
+++ b/config-data/customer-service.yml
@@ -1,4 +1,3 @@
-
 #Application Configuration
 server:
   port: 8092
@@ -8,6 +7,7 @@ server:
 # To See H2 Console in Browser:
 # http://localhost:8092/h2-console
 # Enabling H2 Console
+spring:
   h2:
     console:
       enabled: true
@@ -41,10 +41,12 @@ logging:
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
 
-spring:
-  jpa:
-    defer-datasource-initialization: true
-  sql:
-    init:
-      mode: always
-    
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8099/eureka/
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
