--- a/config-service/src/main/resources/bootstrap.yml
+++ b/config-service/src/main/resources/bootstrap.yml
@@ -1,16 +1,17 @@
 server:
   port: 8081
-  
+
 spring:
   cloud:
     config:
       server:
-        git: 
+        git:
           uri: https://github.com/wlopera/java-micro-services.git
           searchPaths: config-data
           username: ${GIT_USER}
           password: ${GIT_PASSWORD}
+          default-label: "micro-service"
   security:
     user:
       name: root
-      password: s3cr3t
+      password: s3cr3t 
